# sequential-systems

./: AI-temp.md  README.md  git-link.txt  protek506.py  pyproject.toml  test_protek506.py
.github/: copilot-instructions.md
NI-DAQmx/: AI-acquisition-graph.py  P0-O.py  acquisition.py
rezulto/: ai0_temperature.csv  voltage-data.csv
